--- a/app/views/public/posts/edit.html.erb
+++ b/app/views/public/posts/edit.html.erb
@@ -30,12 +30,15 @@
         <div class = "col"><p>商品写真</p></div>
         <div class = "col"><%= f.file_field :images, name: 'post[images][]', data: {index: 0}, accept: "image/*" %></div>
         <div class = "col"><%= f.file_field :images, name: 'post[images][]', data: {index: 1}, accept: "image/*" %></div>
+    </div>
+    
+    <div class = "row">
         <div class = "col"><%= f.file_field :images, name: 'post[images][]', data: {index: 2}, accept: "image/*" %></div>
         <div class = "col"><%= f.file_field :images, name: 'post[images][]', data: {index: 3}, accept: "image/*" %></div>
         <div class = "col"><%= f.file_field :images, name: 'post[images][]', data: {index: 4}, accept: "image/*" %></div>
     </div>
     
-    <div class = "row">
+    <div class = "row my-2">
         <div class = "col"><%= f.submit "変更する" %></div>
     </div>
     <% end %>
