address/editレイアウト

--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -11,14 +11,20 @@
     <%= f.label :postal_code, "郵便番号" %>
     <%= f.text_field :postal_code %>
   </div>
-    
+  
+  <div class = "row">
     <%= f.label :telephone_number, "電話番号" %>
     <%= f.text_field :telephone_number %>
+  </div>  
     
+  <div class = "row">
     <%= f.label :name, "宛名" %>
     <%= f.text_field :name %>
+  </div>
     
+  <div class = "row">
     <%= f.submit "変更する" %>
+  </div>
     
     <% end %>
   
