--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,29 +1,35 @@
 <%= render "public/public_header" %>
 
 <div class = "container">
-    <%= form_with model: @address, url: address_path, method: :patch do |f| %>
   <div class = "row">
+    <h2>住所（宛先）の更新</h2>
+  </div>
+  <div class= "row">
+    <p class = "text-danger">※この情報は発送する時に使用します！</p>
+  </div>
+    <%= form_with model: @address, url: address_path, method: :patch do |f| %>
+  <div class = "row my-2">
     <%= f.label :address, "住所" %>
     <%= f.text_field :address %>
   </div>
     
-  <div class = "row">
+  <div class = "row my-2">
     <%= f.label :postal_code, "郵便番号" %>
     <%= f.text_field :postal_code %>
   </div>
   
-  <div class = "row">
+  <div class = "row my-2">
     <%= f.label :telephone_number, "電話番号" %>
     <%= f.text_field :telephone_number %>
   </div>  
     
-  <div class = "row">
+  <div class = "row my-2">
     <%= f.label :name, "宛名" %>
     <%= f.text_field :name %>
   </div>
     
-  <div class = "row">
-    <%= f.submit "変更する" %>
+  <div class = "row my-2">
+    <%= f.submit "変更する", class:"btn-success" %>
   </div>
     
     <% end %>
