--- a/app/views/admin/genres/new.html.erb
+++ b/app/views/admin/genres/new.html.erb
@@ -1,21 +1,29 @@
 <%= render "admin/admin_header" %>
-<div>
-<%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
-  <%= f.label :name, "ジャンル名" %>
-  <%= f.text_field :name %>
-  <%= f.submit"ジャンル追加" %>
-<% end %>
-</div>
-
-<div>
-<% @genres.each do |f| %>
-
-  <p><%= f.name %></p>
-
-  <%= link_to admin_genre_path(@genres.ids), method: :delete do %>
-  <button class = "btn-danger">削除する</button>
+<div class = "container">
+    
+  
+  <div class = "row my-2">
+  <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
+    <%= f.label :name, "ジャンル名" %>
+    <%= f.text_field :name %>
+    <%= f.submit"ジャンル追加する" %>
   <% end %>
+  </div>
+  
+  <div class = "row border-top border-dark border-3 my-2">
+    <h2>ジャンル一覧</h2>
+  </div>
+  
+  <div class = "row">
+  <% @genres.each do |genre| %>
+  
+    <p class = "border-top my-2"><%= genre.name %></p>
+  
+    <%= link_to admin_genre_path(@genres.ids), method: :delete do %>
+    <button class = "btn-danger my-2">削除する</button>
+    <% end %>
+  
+  <% end %>
+  </div>
 
-<% end %>
 </div>
-
