--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -3,12 +3,12 @@
   <div class = "row">
     <div class = "col ">
       <% @customers.each do |customer| %>
-      <%= customer.first_name %>
-      <%= customer.last_name %>
-      <%= customer.first_name_kana %>
-      <%= customer.last_name_kana %>
-      <%= customer.introduction %>
-      <%= link_to "削除する", admin_customer_path(customer.id), method: :delete, data:{confirm: "本当に削除しますか？"} %>
+      <div>姓　|<%= customer.first_name %></div>
+      <div>名　|<%= customer.last_name %></div>
+      <div><%= customer.first_name_kana %></div>
+      <div><%= customer.last_name_kana %></div>
+      <div><%= customer.introduction %></div>
+      <div><%= link_to "削除する", admin_customer_path(customer.id), method: :delete, data:{confirm: "本当に削除しますか？"} %></div>
       <% end %>
     </div>
   </div>
