--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -2,7 +2,7 @@
 <div class = "container">
   <div class= "row my-3">
       <div class = "col text-center">
-        <h1>管理者メニュー</h1>
+        <h1 class = "border">管理者メニュー</h1>
       </div>
   </div>
   
