--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -8,7 +8,7 @@
       <div>セイ　|<%= customer.first_name_kana %></div>
       <div>メイ　|<%= customer.last_name_kana %></div>
       <div>自己紹介欄　|<%= customer.introduction %></div>
-      <button class = "danger"><%= link_to "削除する", admin_customer_path(customer.id), method: :delete, data:{confirm: "本当に削除しますか？"} %></div>
+      <button class = "btn btn-danger"><%= link_to "削除する", admin_customer_path(customer.id), method: :delete, data:{confirm: "本当に削除しますか？"}, class: "text-dark" %></div>
       <% end %>
     </div>
   </div>
