--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,7 +1,9 @@
 <% @search.each do |s| %>
+      <%= link_to "" do %>
       <tr>
         <td><%= s.name %></td>
         <td><%= s.introduction %></td>
         <td><%= s.price %></td>
       </tr>
+      <% end %>
     <% end %>
