--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,5 +1,5 @@
 <% @search.each do |s| %>
-      <%= link_to "" do %>
+      <%= link_to post_path(@search) do %>
       <tr>
         <td><%= s.name %></td>
         <td><%= s.introduction %></td>
