--- a/app/views/public/_public_header.html.erb
+++ b/app/views/public/_public_header.html.erb
@@ -30,7 +30,7 @@
       <%= form_tag(search_path,:method => 'get') do %>
         <%= label_tag '出品名で検索' %>
         <%= text_field_tag :search %>
-        <%= submit_tag 'Search', :name => nil %>
+        <%= submit_tag 'Search', :name => nil, class: "btn-success" %>
       <% end %>
     </div>
   </div>
