--- a/app/views/public/comments/show.html.erb
+++ b/app/views/public/comments/show.html.erb
@@ -1,5 +1,5 @@
 <%= render "public/public_header" %>
-<div class = "container">
+<div class = "container bg-secondary">
   <div class = "row">
     <div class = "col">
       <h1>コメント一覧</h1>
